--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.kory33</groupId>
-    <artifactId>blokus-ai-jvm</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <artifactId>blokus-engine</artifactId>
+    <version>0.1.0-alpha</version>
+
     <dependencies>
         <dependency>
             <groupId>org.jetbrains</groupId>
@@ -14,6 +15,7 @@
             <version>13.0</version>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
