--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.kory33</groupId>
     <artifactId>blokus-engine</artifactId>
-    <version>0.1.0-alpha</version>
+    <version>0.1.0</version>
 
     <dependencies>
         <dependency>
